--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -67,6 +67,10 @@
   }
 }
 
+/* .login__form__group {
+  grid-column: span 2;
+}
+ */
 .login__card__register-container {
   margin-top: 1rem;
   text-align: center;
