Commit before pull

--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -4,7 +4,7 @@
     <div class="post__feed__following__user-header">
       <img class="user-img" src="{{ follow.photo }}" alt="" srcset="" />
       <h3>
-        <a href="#">{{ follow.username }}</a>
+        <a>{{ follow.username }}</a>
       </h3>
     </div>
 
