--- a/src/app/components/following/following.component.scss
+++ b/src/app/components/following/following.component.scss
@@ -34,11 +34,12 @@
   & > h3 {
     font-size: 1.25rem;
     margin-left: 1rem;
+    text-transform: capitalize;
   }
 
   & > img {
-    max-height: 25px;
-    max-width: 25px;
+    height: 2rem;
+    width: 2rem;
   }
 }
 
